--- a/my-app/package.json
+++ b/my-app/package.json
@@ -119,7 +119,7 @@
       "react-app"
     ]
   },
-  "homepage": "http://williamdarkocode.github.io/myapp",
+  "homepage": "http://williamdarkocode.github.io/funReactJsComponents/myapp/build/index.html",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
